@@ -1,4 +1,8 @@
-﻿drkns 28.04.2016 19:43:18 +0200 - build 4647
+﻿drkns 29.04.2016 09:32:30 +0200 - build 4648
+
+1. Продолжение 4631 - восстановим работоспособность System.ShowCheckingFile.
+
+drkns 28.04.2016 19:43:18 +0200 - build 4647
 
 1. Продолжение 4631.
 
